<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back_main_img"
        android:scaleType="fitXY"/>
    <View
        android:id="@+id/btn_brain"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_marginTop="144dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="527dp"
        />
    <ImageView
        android:layout_width="107dp"
        android:layout_height="98dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="548dp"
        android:layout_marginTop="165dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="132dp"
        android:src="@drawable/brainstorming"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/white"
        android:layout_marginTop="56dp"
        android:textStyle="normal"

        />
    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/text_welcome"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_marginTop="342dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="435dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/description"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="379dp"
        android:layout_marginHorizontal="25dp"
        android:textStyle="normal"
        android:textAlignment="center"
        />
<EditText
android:id="@+id/login_et"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/text_description"
    android:layout_marginHorizontal="25dp"
    android:layout_marginTop="71dp"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:layout_marginBottom="258dp"
    android:textSize="18sp"
    android:hint="@string/login"
    android:textColorHint="@color/black"
    android:background="@drawable/edit_back"
    android:padding="12dp"
    android:textColor="@color/black"

    />
    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_et"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="188dp"
        android:textSize="18sp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_back"
        android:padding="12dp"
        android:textColor="@color/black"
        />
<Button
    android:id="@+id/main_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/password_et"
    android:layout_marginHorizontal="25dp"
    android:layout_marginTop="20dp"
 android:layout_marginBottom="118dp"
    android:onClick="click"
    android:background="@drawable/btn_back"
    android:text="Войти"
    android:textColor="@color/white"
    />
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="270dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="78dp"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/click_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="78dp"
        android:text="@string/click_text"
        android:textSize="20sp"
        android:textColor="@color/orange"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


